hphp/hack/test/typecheck/unused_awaitable14.php.exp
File "unused_awaitable14.php", line 9, characters 17-31:
Cannot cast a value of type `Awaitable<string>` to string.
Only primitives may be used in a `(string)` cast.
If you are trying to cast a Stringish type, please use `stringish_cast`.
This functionality is being removed from HHVM. (Typing[4281])
File "unused_awaitable14.php", line 9, characters 25-31:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "unused_awaitable14.php", line 3, characters 21-37:
This is why I think it is `Awaitable`
